refactor: remove dead import and align styling to rest of codebase